# simple-openai-proxy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose-local.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/.workflows/: build-openai-proxy.yml
.github/workflows/: build-openai-proxy.yml  python-package.yml
.woodpecker/: docker-image.yml  python-package.yml
examples/: tool_call_client_example.py
examples/data/: files_1.json  files_2.json  weather_1.json  weather_2.json
openai_proxy/: __init__.py  app.py  client.py  exception_handler.py  helpers.py  logger.py  openai_compat.py  proxy_client.py  routers.py  schemas.py
openai_proxy/code_blocks_parser/: __init__.py  parser.py
openai_proxy/services/: __init__.py  model_routing.py  openai_service.py  polza_cost_control.py
openai_proxy/settings/: __init__.py  cost_control_settings.py  env_settings.py  openai_settings.py  proxy_client_settings.py
openai_proxy/tool_call_client/: __init__.py  client.py  models.py
tests/: test_import.py  test_openai_service.py  test_polza_cost_control.py  test_schemas.py  test_tool_call_client.py
